--- a/drew-site/package.json
+++ b/drew-site/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://dweissma.github.io/drew-site",
+  "homepage": "http://dweissma.github.io",
   "name": "drew-site",
   "version": "0.1.0",
   "private": true,
@@ -7,9 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.5",
+    "@types/node": "^14.0.24",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
