--- a/drew-site/package.json
+++ b/drew-site/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^14.0.24",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "bootstrap": "^3.4.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
